--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
+    "gsap": "^3.13.0",
     "lucide-vue-next": "^0.545.0",
     "tailwindcss": "^3.4.3",
     "vue": "^3.5.22",
@@ -22,8 +23,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
     "lucide-vue-next": "^0.545.0",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.3",
     "vite": "^7.1.7",
     "vite-plugin-vue-devtools": "^8.0.2"
