--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "firebase:setup": "echo 'Please follow the instructions in FIREBASE_SETUP.md to configure Firebase'"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
+    "firebase": "^12.4.0",
     "gsap": "^3.13.0",
     "lucide-vue-next": "^0.545.0",
     "tailwindcss": "^3.4.3",
