--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_FIREBASE_PROJECT_ID=lettermatter-3d47d
 VITE_FIREBASE_STORAGE_BUCKET=lettermatter-3d47d.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=555094947309
 VITE_FIREBASE_APP_ID=1:555094947309:web:e659ccfeb24f7e08e423e4
+VITE_FIREBASE_DATABASE_URL=https://lettermatter-3d47d-default-rtdb.firebaseio.com
