--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
     "firebase": "^12.4.0",
+    "firebase-tools": "^14.26.0",
     "gsap": "^3.13.0",
     "lucide-vue-next": "^0.545.0",
     "tailwindcss": "^3.4.3",
