--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "test:unit": "vitest",
     "firebase:setup": "echo 'Please follow the instructions in FIREBASE_SETUP.md to configure Firebase'"
   },
   "dependencies": {
@@ -25,11 +26,14 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.21",
+    "jsdom": "^27.2.0",
     "lucide-vue-next": "^0.545.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.3",
     "vite": "^7.1.7",
-    "vite-plugin-vue-devtools": "^8.0.2"
+    "vite-plugin-vue-devtools": "^8.0.2",
+    "vitest": "^4.0.14"
   }
 }
